# swarm-ville

./: .env.example  .eslintrc.cjs  .gitignore  .npmrc  ABRE_Y_JUEGA.txt  AGENT_RUNTIME_ARCHITECTURE.md  ANALYSIS_GAPS_AND_NEXT_PHASES.md  BROWSER_COMPATIBILITY_TEST.md  BROWSER_TEST_RESULTS.md  CHANGELOG.md  CLAUDE_CODE_INTEGRATION_ANALYSIS.md  CONTRIBUTING.md  CRITICAL_BUG_FIXES_SESSION.md  DEMO_INSTRUCTIONS.md  DEPLOYMENT.md  DEVELOPMENT_ROADMAP.md  EXPORT_INSTRUCTIONS.md  FINAL_GAMEPLAY_DEMO.md  FINAL_STATUS.txt  GAMEPLAY_RECORDING_COMPLETE.md  GAMEPLAY_SHOWCASE.md  GAMEPLAY_SUMMARY.txt  GAMEPLAY_TEST_COMPLETE.md  GAMEPLAY_WORKING.md  GODOT_IMPLEMENTATION_STATUS.md  GODOT_MIGRATION_PLAN.md  GODOT_SETUP.md  GODOT_TASKS_COMPLETED.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_READY.md  IMPLEMENTATION_SUMMARY.md  JUEGA_AHORA.txt  JUEGO_FUNCIONANDO.md  JUEGO_LISTO_FINAL.md  LICENSE  MIGRATION_COMPLETE.md  MOBILE_TESTING_GUIDE.md  MVP_READY.txt  NEXT_STEPS.md  OFFICE_ENVIRONMENT_SPEC.md  (+56 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_agent_memory.sql
src-tauri/src/: error.rs  lib.rs  main.rs  sprite_generator.rs
src-tauri/src/agents/: agent.rs  llm_provider.rs  memory.rs  message_bus.rs  mod.rs  persistence.rs  runtime.rs  state.rs  task_orchestrator.rs
src-tauri/src/audio/: capture.rs  mod.rs
src-tauri/src/cli/: connector.rs  detector.rs  mod.rs  types.rs
src-tauri/src/commands/: achievements.rs  mod.rs  persistence.rs
src-tauri/src/db/: achievements.rs  errors.rs  maps.rs  mod.rs  persistence.rs  sprites.rs
src-tauri/src/language/: mod.rs  vocabulary.rs
src-tauri/src/proximity/: mod.rs
src-tauri/src/ws/: handlers.rs  (+3 more)
src-tauri/tests/: debug_claude_response.rs  integration_test.rs
(+688 files in other folders)
